styles/main.css
html {
  font-family: sans-serif;
}
.subbody {
  height: 100vh;
}
footer {
  position: fixed;
  bottom: 0;
}
.container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}
.home {
  background-image: url('/img/home.avif');
  background-size: cover;
  background-color: rgb(127, 195, 255);
  height: 600px;
  display: block;
  color: white;
  font-size: 100px;
  text-shadow: 2px 2px 4px #666;
  padding: 50px 100px;
  text-align: right;
}
/* .homediv {
  background-image: url('/Users/moa/workspace/moa-ha.github.io/img/book.jpeg');
  background-size: 300px;
  background-repeat: no-repeat;
  height: 300px;
  color: black;
} */
.image-with-text {
  position: relative;
  display: inline-block;
}

.image-with-text img {
  display: block;
  width: 100%;
}

.image-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: black;
  font-size: 25px;
}
.image-with-text:hover {
  opacity: 50%;
  transition-duration: 1s;
}
.subhome {
  border-bottom: 2px solid rgb(127, 195, 255);
}
.subimg {
  width: 150px;
  height: auto;
}
.subhome span {
  font-size: xx-large;
}
.btn {
  position: fixed;
  top: 10px;
  right: 10px;
  padding: 10px;
  background-color: rgb(127, 195, 255);
  border: none;
  border-radius: 50%;
  opacity: 50%;
  text-decoration: none;
}
.html-css-p {
  display: inline-block;
  text-align: center;
}
.marginimg {
  display: inline-block;
  height: 30vh;
  /* justify-content: space-between; */
}
.subqna {
  margin: 20px;
}
.toggle {
  font-size: 20px;
  display: block;
  margin: 20px;
}
.smalltext {
  font-size: 15px;
  color: gray;
  font-style: italic;
}
.hidden-box {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  margin: 10px 20px;
}

.toggle:hover + .hidden-box {
  max-height: 300px;
}
.subtitle {
  font-weight: bold;
  font-size: 20px;
  padding: 5px 0px 0px;
}
.definition {
  padding: 0px;
  margin: 0px;
}
.linkbtn {
  padding: 5px;
  background-color: rgb(127, 195, 255);
  border: none;
  border-radius: 50%;
  opacity: 50%;
  text-decoration: none;
}

.jshead {
  font-size: 23px;
  font-weight: bold;
  font-style: italic;
  text-decoration: underline;
}
.jsDom {
  height: 20vh;
}

.bigtext {
  color: gray;
  font-style: italic;
  font-weight: bold;
}

.background {
  background-color: rgb(239, 245, 251);
  margin: 20px;
}
.textcenter {
  text-align: center;
}

@media (max-width: 800px) {
  .home {
    text-align: center;
  }

  .subhome span {
    display: block;
    text-align: center;
  }
  .marginimg {
    display: inline-block;
    width: 500px;
    height: auto;
  }

  .jsDom {
    display: inline-block;
    width: 500px;
    height: auto;
  }
}

/* how to style link? text-decoration: none; - no underline & the text color or color when :hover
how to make header text below the image when it's smaller than width 800 (mobile)?
how to make the list vertical when its mobile?
why .subheader makes the background wider than window? max-width must?*/

